--- a/hole.html
+++ b/hole.html
@@ -23,6 +23,7 @@
             flex-direction: column;
             align-items: center;
             margin-bottom: 20px;
+            z-index: 10; /* Ensures the input stays on top */
         }
 
         input[type="text"] {
@@ -120,6 +121,7 @@
             font-size: 16px;
             opacity: 1;
             animation: warp 5s forwards;
+            z-index: 10; /* Ensures the message stays on top */
         }
     </style>
 </head>
