--- a/hole.html
+++ b/hole.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Schwarzes Loch Animation</title>
+    <title>No Worries</title>
     <style>
         body {
             margin: 0;
