--- a/kranked.html
+++ b/kranked.html
@@ -3,85 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audio Kick and Snare Detection with Waveform</title>
+    <title>Audio Kick and Snare Detection with Video Shake</title>
     <style>
         body {
-            background-color: #121212;
-            color: #ffffff;
             font-family: Arial, sans-serif;
+            background-color: #121212;
+            color: #f5a623;
             text-align: center;
-        }
-        #canvas {
-            display: block;
-            margin: 20px auto;
-            border: 1px solid #ff5722;
-        }
-        #waveform {
-            display: block;
-            margin: 20px auto;
-            border: 1px solid #ff5722;
         }
         .controls {
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
             gap: 10px;
             margin-bottom: 20px;
         }
-        .controls label {
-            display: flex;
-            align-items: center;
-            gap: 5px;
+        #waveform, #video {
+            display: block;
+            margin: 20px auto;
+            border: 1px solid #f5a623;
+            max-width: 100%;
         }
-        .controls input[type="checkbox"] {
-            accent-color: #ff5722;
-        }
-        .controls input[type="range"] {
-            width: 100px;
-        }
-        .controls input[type="file"] {
-            display: none;
-        }
-        .custom-file-upload {
-            background-color: #ff5722;
-            color: white;
-            padding: 10px;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        .loading-screen {
+        #loading {
             display: none;
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            color: #ff5722;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #f5a623;
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 2em;
-        }
-        video {
-            display: block;
-            margin: 20px auto;
-            width: 80%;
-            border: 1px solid #ff5722;
+            z-index: 1000;
         }
     </style>
 </head>
 <body>
     <div class="controls">
-        <label class="custom-file-upload">
-            <input type="file" id="audioFile" accept="audio/*">
-            Choose Audio
-        </label>
-        <label class="custom-file-upload">
-            <input type="file" id="videoFile" accept="video/*">
-            Choose Video
-        </label>
+        <input type="file" id="audioFile" accept="audio/*">
+        <input type="file" id="videoFile" accept="video/*">
         <label>
             <input type="checkbox" id="showPlaybackMark" checked>
             Show Playback Mark
@@ -99,10 +62,10 @@
             <input type="range" id="kickThreshold" min="0" max="1" step="0.01" value="0.9">
         </label>
     </div>
+    <div id="loading">Loading...</div>
     <audio id="audio" controls style="display: none;"></audio>
-    <video id="video" controls></video>
+    <video id="video" controls style="display: none;"></video>
     <canvas id="waveform" width="800" height="100"></canvas>
-    <div class="loading-screen" id="loadingScreen">Loading...</div>
 
     <script>
         const audioFileInput = document.getElementById('audioFile');
@@ -111,21 +74,21 @@
         const videoElement = document.getElementById('video');
         const waveformCanvas = document.getElementById('waveform');
         const waveformContext = waveformCanvas.getContext('2d');
-        const loadingScreen = document.getElementById('loadingScreen');
         const showPlaybackMarkCheckbox = document.getElementById('showPlaybackMark');
         const showKickMarksCheckbox = document.getElementById('showKickMarks');
         const showSnareMarksCheckbox = document.getElementById('showSnareMarks');
         const kickThresholdInput = document.getElementById('kickThreshold');
-
-        audioFileInput.addEventListener('change', handleAudioFile);
-        videoFileInput.addEventListener('change', handleVideoFile);
-        waveformCanvas.addEventListener('click', handleWaveformClick);
+        const loadingScreen = document.getElementById('loading');
 
         let audioContext;
         let audioBuffer;
         let kickTimes = [];
         let snareTimes = [];
         let animationFrameId;
+
+        audioFileInput.addEventListener('change', handleAudioFile);
+        videoFileInput.addEventListener('change', handleVideoFile);
+        waveformCanvas.addEventListener('click', handleWaveformClick);
 
         async function handleAudioFile(event) {
             const file = event.target.files[0];
@@ -136,61 +99,73 @@
                 audioBuffer = await audioContext.decodeAudioData(arrayBuffer);
                 audioElement.src = URL.createObjectURL(file);
                 detectKicksAndSnares(audioBuffer);
+                if (videoFileInput.files.length > 0) {
+                    startProcessing();
+                }
             }
         }
 
         async function handleVideoFile(event) {
             const file = event.target.files[0];
             if (file) {
+                console.log('Loading video file...');
                 videoElement.src = URL.createObjectURL(file);
-                videoElement.style.display = 'block';
-                loadingScreen.style.display = 'flex';
-                await detectKicksAndSnares(audioBuffer);
-                loadingScreen.style.display = 'none';
+                videoElement.muted = true; // Mute the original video sound
+                if (audioFileInput.files.length > 0) {
+                    startProcessing();
+                }
             }
         }
 
+        function startProcessing() {
+            loadingScreen.style.display = 'flex';
+            setTimeout(() => {
+                loadingScreen.style.display = 'none';
+                videoElement.style.display = 'block';
+                drawWaveform(audioBuffer, kickTimes, snareTimes);
+            }, 2000); // Simulate processing time
+        }
+
         function detectKicksAndSnares(buffer) {
-            return new Promise((resolve) => {
-                const offlineContext = new OfflineAudioContext(1, buffer.length, buffer.sampleRate);
-                const source = offlineContext.createBufferSource();
-                source.buffer = buffer;
+            const offlineContext = new OfflineAudioContext(1, buffer.length, buffer.sampleRate);
+            const source = offlineContext.createBufferSource();
+            source.buffer = buffer;
 
-                const lowPassFilter = offlineContext.createBiquadFilter();
-                lowPassFilter.type = 'lowpass';
-                lowPassFilter.frequency.value = 150; // Kick drum frequency range
+            const lowPassFilter = offlineContext.createBiquadFilter();
+            lowPassFilter.type = 'lowpass';
+            lowPassFilter.frequency.value = 150; // Kick drum frequency range
 
-                const highPassFilter = offlineContext.createBiquadFilter();
-                highPassFilter.type = 'highpass';
-                highPassFilter.frequency.value = 1500; // Snare drum frequency range
+            const highPassFilter = offlineContext.createBiquadFilter();
+            highPassFilter.type = 'highpass';
+            highPassFilter.frequency.value = 1500; // Snare drum frequency range
 
-                source.connect(lowPassFilter);
-                source.connect(highPassFilter);
-                lowPassFilter.connect(offlineContext.destination);
-                highPassFilter.connect(offlineContext.destination);
-                source.start(0);
+            source.connect(lowPassFilter);
+            source.connect(highPassFilter);
+            lowPassFilter.connect(offlineContext.destination);
+            highPassFilter.connect(offlineContext.destination);
+            source.start(0);
 
-                offlineContext.startRendering().then((renderedBuffer) => {
-                    const lowData = renderedBuffer.getChannelData(0);
-                    const highData = renderedBuffer.getChannelData(0);
+            offlineContext.startRendering().then((renderedBuffer) => {
+                const lowData = renderedBuffer.getChannelData(0);
+                const highData = renderedBuffer.getChannelData(0);
 
-                    for (let i = 0; i < lowData.length; i++) {
-                        if (lowData[i] > parseFloat(kickThresholdInput.value)) { // Kick detection
-                            kickTimes.push(i / offlineContext.sampleRate);
-                        }
+                kickTimes = [];
+                snareTimes = [];
+
+                for (let i = 0; i < lowData.length; i++) {
+                    if (lowData[i] > parseFloat(kickThresholdInput.value)) { // Kick detection
+                        kickTimes.push(i / offlineContext.sampleRate);
                     }
+                }
 
-                    for (let i = 0; i < highData.length; i++) {
-                        if (highData[i] > 0.5) { // Snare detection threshold
-                            snareTimes.push(i / offlineContext.sampleRate);
-                        }
+                for (let i = 0; i < highData.length; i++) {
+                    if (highData[i] > 0.5) { // Snare detection threshold
+                        snareTimes.push(i / offlineContext.sampleRate);
                     }
+                }
 
-                    console.log('Kick times detected:', kickTimes);
-                    console.log('Snare times detected:', snareTimes);
-                    drawWaveform(audioBuffer, kickTimes, snareTimes);
-                    resolve();
-                });
+                console.log('Kick times detected:', kickTimes);
+                console.log('Snare times detected:', snareTimes);
             });
         }
 
@@ -239,7 +214,9 @@
             const x = event.clientX - rect.left;
             const seekTime = (x / waveformCanvas.width) * audioBuffer.duration;
             audioElement.currentTime = seekTime;
+            videoElement.currentTime = seekTime; // Sync video with audio
             audioElement.play();
+            videoElement.play();
             updateWaveformPosition();
         }
 
