--- a/kranked.html
+++ b/kranked.html
@@ -116,7 +116,7 @@
 
             const highPassFilter = offlineContext.createBiquadFilter();
             highPassFilter.type = 'highpass';
-            highPassFilter.frequency.value = 1500; // Snare drum frequency range
+            highPassFilter.frequency.value = 2000; // Snare drum frequency range
 
             source.connect(lowPassFilter);
             source.connect(highPassFilter);
@@ -138,7 +138,7 @@
                 }
 
                 for (let i = 0; i < highData.length; i++) {
-                    if (highData[i] > 0.5) { // Snare detection threshold
+                    if (highData[i] > 0.7) { // Snare detection threshold
                         snareTimes.push(i / offlineContext.sampleRate);
                     }
                 }
@@ -214,6 +214,24 @@
 
                 requestAnimationFrame(updateWaveformPosition);
             }
+        }
+
+        function applyShakeEffect(kickTimes, snareTimes) {
+            videoElement.addEventListener('timeupdate', () => {
+                const currentTime = videoElement.currentTime;
+                if (kickTimes.some(time => Math.abs(time - currentTime) < 0.1)) {
+                    videoElement.style.transform = 'translate(5px, 0)';
+                    setTimeout(() => {
+                        videoElement.style.transform = '';
+                    }, 100);
+                }
+                if (snareTimes.some(time => Math.abs(time - currentTime) < 0.1)) {
+                    videoElement.style.transform = 'translate(-5px, 0)';
+                    setTimeout(() => {
+                        videoElement.style.transform = '';
+                    }, 100);
+                }
+            });
         }
     </script>
 </body>
