--- a/velox.html
+++ b/velox.html
@@ -83,7 +83,7 @@
         <div class="description">
             <p>Wanna see a F-22 fly over your desktop? Then download Velox now! Some guy named lykia (a fucking insane good looking, german phonk producer, who is 19 years old) made it btw. Enjoy.</p>
         </div>
-        <a href="Velox.exe" download class="button">Download Latest Version</a>
+        <a href="Velox [PRE-ALPHA].exe" download class="button">Download Latest Version</a>
         <a href="https://discord.gg/ecKks2bN8r" target="_blank" class="button discord-button">Join Our Discord</a>
     </div>
 </body>
