--- a/velox.html
+++ b/velox.html
@@ -30,7 +30,7 @@
             font-weight: normal;
         }
         .container {
-            margin-top: 80px; /* Increased margin to accommodate the description */
+            margin-top: 80px;
             padding: 20px;
         }
         .description {
@@ -76,24 +76,12 @@
             border-radius: 5px;
             text-decoration: none;
             cursor: pointer;
-            transition: background-color 0.3s, color 0.3s;
+            transition: background-color 0.3s, color 0.3s, transform 0.3s;
         }
         .outline-button:hover {
             background-color: #ff5722; /* Orange background */
             color: #fff;
-        }
-        .inline-link {
-            display: block;
-            margin: 20px 0;
-            font-size: 16px;
-            font-weight: bold;
-            color: #ff5722; /* Orange color */
-            text-decoration: underline;
-            cursor: pointer;
-            transition: color 0.3s;
-        }
-        .inline-link:hover {
-            color: #e64a19;
+            transform: scale(1.05);
         }
         @media (max-width: 600px) {
             .button, .outline-button {
@@ -116,7 +104,7 @@
         </div>
         <a href="Velox [PRE-ALPHA].exe" download class="button">Download Latest Version</a>
         <a href="https://discord.gg/ecKks2bN8r" target="_blank" class="button discord-button">Join Our Discord</a>
-        <a href="Velox [PRE-ALPHA].zip" download class="inline-link">Download Zip</a>
+        <a href="Velox [PRE-ALPHA].zip" download class="outline-button">Download Zip</a>
     </div>
 </body>
 </html>
