--- a/velox.html
+++ b/velox.html
@@ -100,7 +100,7 @@
     </div>
     <div class="container">
         <div class="description">
-            <p>Wanna see a F-22 fly over your desktop? Then download Velox now! Some guy named lykia (a fucking insane good looking, german phonk producer, who is 19 years old) made it btw. Enjoy.</p>
+            <p>Wanna see a F-22 fly over your desktop? Then download Velox now! Some guy named lykia (a fucking insane good looking, 19 years old, german phonk producer) made it btw. Enjoy.</p>
         </div>
         <a href="Velox [PRE-ALPHA].exe" download class="button">Download Latest Version</a>
         <a href="https://discord.gg/ecKks2bN8r" target="_blank" class="button discord-button">Join Our Discord</a>
